feat: finish rework of personal account views

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame" id="personal-account-operation-log-list"></div>
+                                <div class="paper__frame" id="personal-operation-log-list"></div>
                             </div>
                         </div>
                     </section>
@@ -204,7 +204,7 @@
                             <h3 class="section__title">Comptes enregistrés</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
-                                    <table class="paper__table" id="account-paste-list"></table>
+                                    <table class="paper__table" id="paste-favorite-account-list"></table>
                                 </div>
                             </div>
                         </div>
