feat: handle offshore tab visibility

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <section class="grid__section grid__section--with-border">
                         <div class="section">
                             <h3 class="section__title">Solde de l'entreprise</h3>
-                            <p class="section__number" id="enterprise-account-balance"></p>
+                            <p class="section__balance" id="enterprise-account-balance"></p>
                         </div>
                     </section>
                     <!-- Enterprise account deposit form -->
