feat: add account list counter and simplify some code

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <!-- Personal account favorite account list -->
                     <section class="grid__section">
                         <div class="section section--column">
-                            <h3 class="section__title">Comptes enregistrés <span id="personal-favorite-account-sum-text"></span></h3>
+                            <h3 class="section__title">Comptes enregistrés [<span id="personal-favorite-account-count"></span>/5]</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="paper__table" id="delete-favorite-account-list"></table>
@@ -201,7 +201,7 @@
                     <!-- Personal account favorite account paste list -->
                     <section class="grid__section">
                         <div class="section section--column">
-                            <h3 class="section__title">Comptes enregistrés</h3>
+                            <h3 class="section__title">Comptes enregistrés [<span id="personal-transfer-favorite-account-count"></span>/5]</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="paper__table" id="paste-favorite-account-list"></table>
