fix: fix js issues

--- a/index.html
+++ b/index.html
@@ -338,17 +338,17 @@
 
     <!-- Template / favorite account with delete button -->
     <template id="favorite-account-delete-template">
-        <tr class="account">
-            <td class="account__section">
-                <h4 class="account__name"></h4>
+        <tr class="favorite-account">
+            <td class="favorite-account__section">
+                <h4 class="favorite-account__name"></h4>
             </td>
-            <td class="account__section">
-                <p class="account__number"></p>
+            <td class="favorite-account__section">
+                <p class="favorite-account__number"></p>
             </td>
-            <td class="account__section account__section--right">
-                <details class="account__accordion">
-                    <summary class="account__icon-button"></summary>
-                    <button class="account__text-button">Supprimer</button>
+            <td class="favorite-account__section favorite-account__section--right">
+                <details class="favorite-account__accordion">
+                    <summary class="favorite-account__icon-button"></summary>
+                    <button class="favorite-account__text-button">Supprimer</button>
                 </details>
             </td>
         </tr>
