--- a/index.html
+++ b/index.html
@@ -352,10 +352,8 @@
                 <p class="favorite-account__number"></p>
             </td>
             <td class="favorite-account__section favorite-account__section--right">
-                <details class="favorite-account__accordion">
-                    <summary class="favorite-account__icon-button"></summary>
-                    <button class="favorite-account__text-button">Supprimer</button>
-                </details>
+                <button class="favorite-account__icon-button favorite-account__icon-button--edit"></button>
+                <button class="favorite-account__icon-button favorite-account__icon-button--delete"></button>
             </td>
         </tr>
     </template>
