--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Comptes enregistrés [<span id="personal-favorite-account-count"></span>/5]</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame">
-                                    <table class="paper__table" id="delete-favorite-account-list"></table>
-                                </div>
+                                <div class="paper__frame" id="favorite-account-delete-list"></div>
                             </div>
                         </div>
                     </section>
@@ -204,9 +202,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Comptes enregistrés [<span id="personal-transfer-favorite-account-count"></span>/5]</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame">
-                                    <table class="paper__table" id="paste-favorite-account-list"></table>
-                                </div>
+                                <div class="paper__frame" id="paste-favorite-account-list"></div>
                             </div>
                         </div>
                     </section>
@@ -342,33 +338,62 @@
 
     </main>
 
-    <!-- Template / favorite account with delete button -->
-    <template id="favorite-account-delete-template">
-        <tr class="favorite-account">
-            <td class="favorite-account__section">
+    <!-- Template / favorite account / normal view -->
+    <template id="favorite-account-normal-template">
+        <div class="favorite-account">
+            <div class="favorite-account__section">
                 <h4 class="favorite-account__name"></h4>
-            </td>
-            <td class="favorite-account__section">
+            </div>
+            <div class="favorite-account__section">
                 <p class="favorite-account__number"></p>
-            </td>
-            <td class="favorite-account__section favorite-account__section--right">
-                <button class="favorite-account__icon-button favorite-account__icon-button--edit"></button>
-                <button class="favorite-account__icon-button favorite-account__icon-button--delete"></button>
-            </td>
-        </tr>
+            </div>
+            <div class="favorite-account__section favorite-account__section--right">
+                <button class="favorite-account__icon-button">
+                    <svg class="favorite-account__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
+                        <path d="M0 0h24v24H0V0z" fill="none"/>
+                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54z"/>
+                    </svg>
+                </button>
+                <button class="favorite-account__icon-button">
+                    <svg class="favorite-account__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+                        <path d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z" fill="none"/>
+                        <path d="M292 64h-72a4 4 0 00-4 4v28h80V68a4 4 0 00-4-4z" fill="none"/>
+                        <path d="M447.55 96H336V48a16 16 0 00-16-16H192a16 16 0 00-16 16v48H64.45L64 136h33l20.09 314A32 32 0 00149 480h214a32 32 0 0031.93-29.95L415 136h33zM176 416l-9-256h33l9 256zm96 0h-32V160h32zm24-320h-80V68a4 4 0 014-4h72a4 4 0 014 4zm40 320h-33l9-256h33z"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
     </template>
 
-    <!-- Template / favorite account with paste feature -->
+    <!-- Template / favorite account / edit view -->
+    <template id="favorite-account-edit-template">
+        <form class="favorite-account">
+            <div class="favorite-account__section">
+                <input class="favorite-account__input" type="text">
+            </div>
+            <div class="favorite-account__section">
+                <input class="favorite-account__input" type="text">
+            </div>
+            <div class="favorite-account__section favorite-account__section--right">
+                <button class="favorite-account__text-button" type="submit">Modifier</button>
+            </div>
+        </form>
+    </template>
+
+    <!-- Template / favorite account / paste view -->
     <template id="favorite-account-paste-template">
-        <tr class="favorite-account favorite-account--clickable">
-            <td class="favorite-account__section">
+        <div class="favorite-account favorite-account--clickable">
+            <div class="favorite-account__section">
                 <h4 class="favorite-account__name favorite-account__name--margin"></h4>
                 <p class="favorite-account__number"></p>
-            </td>
-            <td class="favorite-account__section favorite-account__section--right">
-                <div class="favorite-account__paste-icon"></div>
-            </td>
-        </tr>
+            </div>
+            <div class="favorite-account__section favorite-account__section--right">
+                <svg class="favorite-account__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                    <path d="M16 1H2v16h2V3h12V1zm5 4H6v18h15V5zm-2 16H8V7h11v14z"/>
+                </svg>
+            </div>
+        </div>
     </template>
 
     <!-- Template / log -->
